<resources>
    <string name="app_name">SuitmediaApp</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="selected_username">Selected User Name</string>
    <string name="choose_user">Choose a User</string>
    <string name="icon_photo">Icon Photo</string>
    <string name="email">Email</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="retry">Retry</string>
</resources>